# CS_236_Lab4

./: Automaton.h  CMakeLists.txt  CommentAutoma.cpp  CommentAutoma.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  IDAutoma.cpp  IDAutoma.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  StringAutoma.cpp  StringAutoma.h  Token.cpp  Token.h  Tuple.cpp  Tuple.h  UndefinedCommentAutoma.cpp  UndefinedCommentAutoma.h  UndefinedStringAutoma.cpp  UndefinedStringAutoma.h  main.cpp  test.txt
